// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Body is working properly 1`] = `
<div
  className="card-pf"
>
  <div
    className="card-pf-body"
  >
    This is a Card Body
  </div>
</div>
`;

exports[`Card Container is working properly 1`] = `
<div
  className="card-pf"
>
  <div
    className="container-fluid container-cards-pf"
  />
</div>
`;

exports[`Card Drop Down Button is working properly 1`] = `
<div
  className="card-pf"
>
  <div
    className="card-pf-time-frame-filter dropdown  "
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-default"
      disabled={false}
      id="cardDropdownButton1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Last 30 Days
       
      <span
        className="caret"
      />
    </button>
    <ul
      aria-labelledby="cardDropdownButton1"
      className="dropdown-menu dropdown-menu-right"
      role="menu"
    >
      <li
        className="active"
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last 30 Days
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last 60 Days
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Last 90 Days
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Card Footer is working properly 1`] = `
<div
  className="card-pf"
>
  <div
    className="card-pf-footer"
  >
    This is a Card Footer
  </div>
</div>
`;

exports[`Card Header is working properly 1`] = `
<div
  className="card-pf"
>
  <div
    className="card-pf-heading"
  >
    <div
      className="dropdown card-pf-time-frame-filter"
    >
      <button
        className="btn btn-default"
        disabled={false}
        type="button"
      >
        Button
        <span
          className="caret"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Link is working properly 1`] = `
<p>
  <a
    className=""
    href="https://github.com/patternfly/patternfly-react/pull/203"
  >
    <span
      aria-hidden="true"
      className="pficon pficon-add-circle-o"
    />
     Add New Cluster
  </a>
</p>
`;

exports[`Card Title is working properly 1`] = `
<div
  className="card-pf some-class"
>
  <h2
    className="card-pf-title"
  >
    Card Title
  </h2>
</div>
`;
